--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -5,7 +5,7 @@
   color: var(--color-text);
   background-color: #0c0c0c99;
   padding: 20px 5%;
-  margin: 10px 5%;
+  margin: 2% 5%;
   border-radius: 20px;
   z-index: 1;
 }
@@ -54,6 +54,9 @@
     background: transparent;
     padding-left: 0;
     padding-right: 0;
+  }
+  .title {
+    font-size: 20px;
   }
   .aboutImg {
     display: none;
