--- a/src/components/projects/projectcard.module.css
+++ b/src/components/projects/projectcard.module.css
@@ -25,7 +25,7 @@
 
 .skills {
   display: grid;
-  grid-template-columns: repeat(3, minmax(50px, 1fr));
+  grid-template-columns: repeat(3, minmax(40px, 1fr));
   width: max-content;
   gap: 5px;
 }
@@ -54,5 +54,11 @@
 @media screen and (max-width: 830px) {
   .cardContainer {
     margin: 0px;
+  }
+  .skills {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(40px, 1fr));
+    width: max-content;
+    gap: 5px;
   }
 }
