--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -5,17 +5,17 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 0 10%;
+  margin: 2% 10%;
   padding: 20px 0;
 }
 .content {
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1.5fr));
-  gap: 10px; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  /* gap: 10px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
   gap: 15px;
-  /* width: 100%; */
+  width: 100%;
 }
 .title {
   font-size: 30px;
@@ -28,5 +28,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+  .title {
+    font-size: 20px;
   }
 }
